# HexaBuilders

./: .gitignore  ACTIVATE_SEPARATE_DATABASES.md  DATABASE_SEPARATION_FIXES.md  DATABASE_SEPARATION_GUIDE.md  DEVELOPMENT_LOG.md  GUIA_DESPLIEGUE_GCP_CONSOLA.md  IMPLEMENTATION_SUMMARY.md  README.md  README_BFF.md  adaptador.Dockerfile  aeroalpes.Dockerfile  bff_web.Dockerfile  docker-compose.override.yml  docker-compose.override.yml.bak  docker-compose.production.yml  docker-compose.separated-databases.yml  docker-compose.simple.yml  docker-compose.yml  notificacion.Dockerfile  notifications.Dockerfile  partner-management.Dockerfile  production_status_report.md  pulsar-requirements.txt  pyproject.toml  requirements-bff.txt  requirements.txt  run_bff_web.py  run_partner_service.py
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS
Semana 2/: README.md
Semana I/: Event Storming Marketing de Afiliados TO-BE.drawio  README.md
dockerfiles/: bff_web.Dockerfile  notifications.Dockerfile
documentacion/: README.md
k8s/: bff-web-deployment.yaml  campaign-management-deployment.yaml  elasticsearch-deployment.yaml  kustomization.yaml  namespace.yaml  notifications-deployment.yaml  onboarding-deployment.yaml  partner-management-deployment.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml  pulsar-bookie.yaml  pulsar-broker.yaml  pulsar-standalone.yaml  pulsar-zookeeper.yaml  recruitment-deployment.yaml
postman/: HexaBuilders_BFF_Web.postman_collection.json  HexaBuilders_BFF_Web.postman_environment.json  (+1 more)
(+363 files in other folders)
