[project]
name = "hexabuilders"
version = "1.0.0"
authors = [
  { name="Juan Urrego", email="js.urrego110@uniandes.edu.co" },
]
description = "Sistema de gestión de partners HexaBuilders"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "src",
]